# slmx4

./: .gitignore  Multicast Instructions  README.md  max example.maxpat
SW_Repartisseur/: .project  CMakeLists.txt  DATA  DATA-Normalised  plotgraph.py  slmx4_default_setup
SW_Repartisseur/inc/: sendosc.h  serialib.h  slmx4_vcom.h  tinyosc.h
SW_Repartisseur/python/: plot_animate_test2.py  plot_animate_test3.py  plot_animate_test5.py
SW_Repartisseur/src/: kbhit.c  main.cpp  main_bck.cpp  main_proto_577.cpp  respiration.cpp  serialib.cpp  serialib_old.cpp  slmx4_driver.c  slmx4_vcom.cpp  tinyosc.c
showpsd/: .gitignore  BREATH176  BREATH23  BREATH_SIGNAL  BREATH_SIGNAL_ALL  CMakeLists.txt  DATA-iter64-pps128-frame-141ms  DATA-iter64-pps128-maxrms-141ms  DATA-iter64-pps128-wind1-141ms  DATA-iter64-pps128-wind3-141ms  DATA-iter64-pps128-wind5-141ms  DIFF_FRAMES  FILTERED_FRAMES  FILTERED_SD_FRAMES  FILTERED_TD_FRAMES  FREQUENCIES  FREQ_FRAMES  MAX_FRAMES  Makefile  RADAR92  RAW_FRAMES  README.md  RMS_FRAMES  SCAN22  imshow.py  movedata.sh  movedata2.sh  plotbreath.ph  plotdiff.py  plotgraph.py  plotscan.py  plotsinglebreath.py
showpsd/bck/: DIFF_FRAMES  FILTERED_FRAMES  RMS_FRAMES
showpsd/doc/: FREQ_FRAMES  Schema.odg  Statut 2023-03-06.docx  Statut 2023-03-06.odt
showpsd/filter_design_data/: DATA-iter64-pps128-fra33-141ms  DATA-iter64-pps128-rms-141ms
showpsd/inc/: breath.h  filters.h  frameFilter.h  frameFilter_21taps.h  frameFilter_63taps.h  peak.h  respiration.h  rms.h  slmx4_driver.h  slmx4_vcom.h  testData.h  zeroxing.h
showpsd/python/: getbreath.py  (+4 more)
(+147 files in other folders)
